--- a/YOLKALYZER.app/Contents/Info.plist
+++ b/YOLKALYZER.app/Contents/Info.plist
@@ -7,7 +7,7 @@
 	<key>AMStayOpen</key>
 	<false/>
 	<key>BuildMachineOSBuild</key>
-	<string>12C32</string>
+	<string>12D42</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>English</string>
 	<key>CFBundleDocumentTypes</key>
@@ -32,11 +32,11 @@
 	<key>CFBundleIconFile</key>
 	<string>AutomatorApplet</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.apple.automator.YOLKALYZER_Droplet</string>
+	<string>com.apple.automator.YOLKALYZER</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>YOLKALYZER_Droplet</string>
+	<string>YOLKALYZER</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
@@ -54,7 +54,7 @@
 	<key>DTPlatformVersion</key>
 	<string>GM</string>
 	<key>DTSDKBuild</key>
-	<string>12C32</string>
+	<string>12D42</string>
 	<key>DTSDKName</key>
 	<string></string>
 	<key>DTXcode</key>
